--- a/views/home.pug
+++ b/views/home.pug
@@ -4,10 +4,56 @@ html
 		title Tagpro Dev
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0')
-		// link(rel='stylesheet', href='/init.css')
+		link(rel='stylesheet', href='/init.css')
 		// link(rel='icon', href='/favicon.svg')
 
-body(style="background:black")
-	h1 Tagpro.dev
+body
 
-	<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/r8xq5x" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+	.pane-wrap
+
+		.pane.content
+
+			.item
+
+				h3 Are you serious!?
+				<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/r8xq5x" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+				.tibit
+					p 4 days ago
+					ul.tags
+						li ball pun
+						li fail
+
+
+			.item
+
+				h3 Are you serious!?
+				<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/r8xq5x" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+				.tibit
+					p 4 days ago
+					ul.tags
+						li ball pun
+						li fail
+
+		.pane.filter
+			.label
+				span.title Map
+				select
+
+			.label
+				span.title Age
+
+			.label
+				span.title League
+
+			.label
+				span.title Player
+				select
+
+			.label
+				span.title POV
+
+			.label
+				span.title Server
+
+			.label
+				span.title Team
