--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -36,7 +36,58 @@ body
 					// border-bottom 1px solid #121116
 					border-bottom 1px solid #1a191e
 
-					h3
-						color white
-						font-size 1.4rem
-						line-height 2rem
+
+// import page
+.import
+	background #0b0a0f
+	padding 5%
+
+	.contain
+
+		> div
+			padding 10px
+
+		.group
+		.half1
+			border-bottom 1px solid rgba(white .05)
+			margin-bottom 10px
+
+		label
+			display block
+			margin-bottom 15px
+
+
+	h5
+		color white
+		font-size 1rem
+		display inline-block
+		width 200px
+
+	select
+	input
+		background rgba(white, .05)
+		background #121116
+		padding 5px 10px
+		font-size 1.4rem
+		border none
+		border-radius 4px
+		color #c7c7c7
+		width 240px
+
+		&.extra
+		&.caps
+			margin-left 15px
+
+		&:focus
+			box-shadow 0 0 2px 2px blue
+
+	button
+		font-size 2rem
+		background green
+		padding 1rem
+		border-radius 20px / 18px
+		cursor pointer
+		margin-top 20px
+
+		&:focus
+			box-shadow 0 0 2px 2px green
