--- a/views/home.pug
+++ b/views/home.pug
@@ -9,10 +9,12 @@ html
 
 body
 
-	.pane-wrap
+	span oi
 
-		.pane.content
+	// .pane-wrap
 
-			.item
+	// 	.pane.content
 
-				<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/r8xq5x" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+	// 		.item
+
+	// 			<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/r8xq5x" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
