--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -6,7 +6,7 @@
 // --------------------------------------------------------------------------
 
 :root
-	font-size 17px
+	font-size 16px
 	--blue  #0f71e2
 	--green #04ba5f
 	--red   #ff2b63
@@ -15,79 +15,81 @@ html
 	touch-action manipulation
 
 body
-	background #0b0a0f
+	background #131317
 	height 100%
 	width 100%
 	display block
 	scroll-behavior smooth
 	overscroll-behavior none
 
+	.panel-top
+		// background #0b0a0f
+		display block
+		padding 2rem
+
+		h1
+			font-size rem
+			color rgba(white, .5)
+
+
 	.pane-wrap
-		display grid
-		grid-template-columns 80% 20%
+		display flex
+		flex-flow nowrap
 
 		.pane
+			display flex
+			flex-grow 1
+			// align-items center
+			// justify-content top
 
-			&.content
-				background #121116
+		.pane-left
+			flex 0 0 15em
 
-				.item
-					padding 10%
-					// border-bottom 1px solid #121116
-					border-bottom 1px solid #1a191e
+			ul
+				li
 
+		.pane-right
+			border-radius 8px
+			display flex
+			flex-wrap wrap
+			padding 3rem
 
-// import page
-.import
-	background #0b0a0f
-	padding 5%
+			.item
+				background #1b1b21
+				border-radius 8px
+				margin 5px
+				flex 1 1 21%
 
-	.contain
+				h5
+					// background green
+					color white
+					padding 1rem
+					text-transform uppercase
 
-		> div
-			padding 10px
+				table
+					width 100%
+					text-align center
+					border-collapse collapse
 
-		.group
-		.half1
-			border-bottom 1px solid rgba(white .05)
-			margin-bottom 10px
+				thead
+					tr
+						color white
+						font-size .8rem
+						background rgba(black, .25)
 
-		label
-			display block
-			margin-bottom 15px
+				tbody
+					tr
+						// border-bottom 1px solid #1a191e
+						// padding 1rem
+						border-bottom 1px solid #121116
+						color #eee
+						font-size .9rem
 
+						td
+							padding .2rem
 
-	h5
-		color white
-		font-size 1rem
-		display inline-block
-		width 200px
+							&:first-child
+								background rgba(black, .25)
 
-	select
-	input
-		background rgba(white, .05)
-		background #121116
-		padding 5px 10px
-		font-size 1.4rem
-		border none
-		border-radius 4px
-		color #c7c7c7
-		width 240px
-
-		&.extra
-		&.caps
-			margin-left 15px
-
-		&:focus
-			box-shadow 0 0 2px 2px blue
-
-	button
-		font-size 2rem
-		background green
-		padding 1rem
-		border-radius 20px / 18px
-		cursor pointer
-		margin-top 20px
-
-		&:focus
-			box-shadow 0 0 2px 2px green
+				.name
+					text-align left
