--- a/views/stats.pug
+++ b/views/stats.pug
@@ -84,6 +84,22 @@ body
 
 
 
+			.item
+				h5 Clean Sheets
+				table
+					thead
+						tr
+							td
+							td.name Player
+							td Cleansheet
+
+					tbody
+						each n, key in cleansheet
+							tr
+								td 1
+								td.name= n.player
+								td= n.cleansheet
+
 
 
 
