--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -57,14 +57,18 @@ body
 			.item
 				background #1b1b21
 				border-radius 8px
-				margin 5px
-				flex 1 1 21%
+				margin 10px
+				// flex 1 1 21%
+				width 400px
+				padding-bottom .5rem
 
 				h5
-					// background green
-					color white
+					color green
 					padding 1rem
 					text-transform uppercase
+					background rgba(black, .5)
+					border-radius 8px 8px 0 0
+					text-align center
 
 				table
 					width 100%
@@ -75,21 +79,31 @@ body
 					tr
 						color white
 						font-size .8rem
-						background rgba(black, .25)
+						color rgba(white, .25)
+						background rgba(black, .5)
+						font-size .7rem
+
+						td
+							padding-bottom .3rem
 
 				tbody
 					tr
-						// border-bottom 1px solid #1a191e
-						// padding 1rem
-						border-bottom 1px solid #121116
 						color #eee
 						font-size .9rem
 
 						td
 							padding .2rem
+							font-size 0.8rem
 
 							&:first-child
-								background rgba(black, .25)
+								color rgba(white, .25)
+								width 30px
+								text-align right
+								padding-right 10px
+
+						&:nth-of-type(odd)
+							background rgba(black, .1)
+
 
 				.name
 					text-align left
