--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -62,13 +62,16 @@ body
 				width 400px
 				padding-bottom .5rem
 
+				&.large
+					width 100%
+
 				h5
 					color green
 					padding 1rem
+					font-size 1rem
 					text-transform uppercase
 					background rgba(black, .5)
 					border-radius 8px 8px 0 0
-					text-align center
 
 				table
 					width 100%
@@ -81,7 +84,7 @@ body
 						font-size .8rem
 						color rgba(white, .25)
 						background rgba(black, .5)
-						font-size .7rem
+						font-size .8rem
 
 						td
 							padding-bottom .3rem
@@ -89,11 +92,11 @@ body
 				tbody
 					tr
 						color #eee
-						font-size .9rem
+						font-size .10rem
 
 						td
 							padding .2rem
-							font-size 0.8rem
+							font-size 0.9rem
 
 							&:first-child
 								color rgba(white, .25)
