--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -1,112 +1,11 @@
-@import 'lib/global'
-@import 'lib/font'
-@import 'lib/reset'
+@import 'base/reset.styl'
+@import 'base/helpers.styl'
+@import 'base/form.styl'
 
-//  root
-// --------------------------------------------------------------------------
+/* custom variables */
+@import 'custom/variables.styl'
+@import 'custom/type.styl'
+@import 'custom/components.styl'
+@import 'custom/layout.styl'
 
-:root
-	font-size 16px
-	--blue  #0f71e2
-	--green #04ba5f
-	--red   #ff2b63
-
-html
-	touch-action manipulation
-
-body
-	background #131317
-	height 100%
-	width 100%
-	display block
-	scroll-behavior smooth
-	overscroll-behavior none
-
-	.panel-top
-		// background #0b0a0f
-		display block
-		padding 2rem
-
-		h1
-			font-size rem
-			color rgba(white, .5)
-
-
-	.pane-wrap
-		display flex
-		flex-flow nowrap
-
-		.pane
-			display flex
-			flex-grow 1
-			// align-items center
-			// justify-content top
-
-		.pane-left
-			flex 0 0 15em
-
-			ul
-				li
-
-		.pane-right
-			border-radius 8px
-			display flex
-			flex-wrap wrap
-			padding 3rem
-
-			.item
-				background #1b1b21
-				border-radius 8px
-				margin 10px
-				// flex 1 1 21%
-				width 400px
-				padding-bottom .5rem
-
-				&.large
-					width 100%
-
-				h5
-					color green
-					padding 1rem
-					font-size 1rem
-					text-transform uppercase
-					background rgba(black, .5)
-					border-radius 8px 8px 0 0
-
-				table
-					width 100%
-					text-align center
-					border-collapse collapse
-
-				thead
-					tr
-						color white
-						font-size .8rem
-						color rgba(white, .25)
-						background rgba(black, .5)
-						font-size .8rem
-
-						td
-							padding-bottom .3rem
-
-				tbody
-					tr
-						color #eee
-						font-size .10rem
-
-						td
-							padding .2rem
-							font-size 0.9rem
-
-							&:first-child
-								color rgba(white, .25)
-								width 30px
-								text-align right
-								padding-right 10px
-
-						&:nth-of-type(odd)
-							background rgba(black, .1)
-
-
-				.name
-					text-align left
+/******************/
