--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -19,6 +19,7 @@
 
     header
         padding 0.8rem 1rem 0.1em
+        background linear-gradient(to top, #fbfbfb, white)
 
         h3
             font-weight: 700
