--- a/src/css/custom/type.styl
+++ b/src/css/custom/type.styl
@@ -25,9 +25,9 @@ p
   line-height: 1.6
 a
   color: $body-color
-  transition: all .2s ease
   &:hover, &:focus
-    text-decoration: underline
+    // transition  color .2s ease, border .2s ease-in-out
+    text-decoration none
   //accessibility
   &:focus
     box-shadow: 0 0 1px #222222
