--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -188,7 +188,7 @@ table
 .flag
     width: 30px;
     height: 20px;
-    background: url(../public/img/flags-sprite.png) no-repeat
+    background: url(img/flags-sprite.png) no-repeat
 .GB-ENG
     background-position: -120px -140px;
 .DE
