--- a/src/css/custom/variables.styl
+++ b/src/css/custom/variables.styl
@@ -23,6 +23,7 @@ $table-th-bg = #fbfbfb
 $table-th-padding = 1em .5em
 $table-highlight = linear-gradient(180deg, #8A34E6 0%, #501070 100%), rgba(220, 148, 254, 0.09)
 $table-row-color = #e8e8e8
+$table-tr-hover-bg = alpha($tertiary-color, 0.045)
 
 $button-bg = $primary-color
 $button-bg-hover = $secondary-color
