--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -29,7 +29,7 @@ body
 
     h1
       padding-left 1.7em
-      background url(../public/img/logo.png) no-repeat left center
+      background url(img/logo.png) no-repeat left center
       background-size contain
 
 
@@ -46,7 +46,7 @@ body
 
 #sidebar
   grid-area sidebar
-  background $sidebar-bg url(../public/img/watermark-logo.png) no-repeat left bottom
+  background $sidebar-bg url(img/watermark-logo.png) fixed no-repeat left bottom
 
 #main, #sidebar
   h1
