--- a/views/dash.pug
+++ b/views/dash.pug
@@ -12,29 +12,23 @@ block content
 
 			.stats-card
 				header
-					h3 Wins
+					h3 Win Rate
 
 				table
 					thead
 						tr
 							th
-							th.text-c G
-							th.text-c W
-							th.text-c L
-							th.text-c Win Rate
+							th.text-r Win Rate
 					tbody
 						each n, key in winratio
 							tr(class=(key === 0 ? 'top' : ''))
 								td.rank
 									span.pos #{n.rank}.
 									| #{n.player}
-								td.text-c= n.game
-								td.text-c= n.win
-								td.text-c= n.lose
-								td.text-c= n.win_ratio
+								td.text-r= n.win_ratio
 
 				footer
-					a(href="/results") View full list
+					a(href="/stats/wins") View full list
 						span.icon
 
 
