--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -18,24 +18,16 @@
     margin-bottom: .5rem;
 
     header
-        padding 0.8rem 1rem 0.1em
-        background linear-gradient(to top, #fbfbfb, white)
+        padding 0.8rem 10px  0.1em 10px
+        background linear-gradient(to top, #8a34e6, #a353f8)
 
         h3
             font-weight: 700
             position relative
+            color white
+            font-size 1.4rem
             margin-bottom: 0;
             padding-bottom: 0.3em;
-
-            &:before
-                position absolute
-                height: 3px
-                width: 1em
-                background: rgba(255,40,130,1)
-                left 0
-                bottom 0
-                content ''
-                display: block
 
     .top
         background: $table-highlight;
@@ -46,15 +38,19 @@
             padding-top $stats-td-highlight-tb
             padding-bottom $stats-td-highlight-tb
 
+        td:last-child
+            font-weight 700
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.20834 19.7917C5.20834 18.6866 5.64732 17.6268 6.42873 16.8454C7.21013 16.064 8.26993 15.625 9.37503 15.625V14.5833C8.17443 14.5832 7.01074 14.1684 6.0807 13.4092C5.15066 12.65 4.51134 11.5929 4.27084 10.4167H3.125C2.2962 10.4167 1.50135 10.0874 0.9153 9.5014C0.32924 8.9153 0 8.1205 0 7.2917V2.08333H2.08334C2.88334 2.08333 3.61459 2.38438 4.16667 2.87917V0H15.625V2.87917C16.1973 2.36575 16.9394 2.08227 17.7083 2.08333H19.7916V7.2917C19.7916 8.1205 19.4624 8.9153 18.8764 9.5014C18.2903 10.0874 17.4954 10.4167 16.6666 10.4167H15.5208C15.2803 11.5929 14.641 12.65 13.7109 13.4092C12.7809 14.1684 11.6172 14.5832 10.4166 14.5833V15.625C11.5217 15.625 12.5815 16.064 13.3629 16.8454C14.1443 17.6268 14.5833 18.6866 14.5833 19.7917H5.20834ZM10.4166 16.6667H9.37503C8.72853 16.6665 8.09793 16.8667 7.56995 17.2398C7.04201 17.6129 6.64272 18.1405 6.42709 18.75H13.3646C13.1489 18.1405 12.7496 17.6129 12.2217 17.2398C11.6938 16.8667 11.0631 16.6665 10.4166 16.6667ZM14.5833 1.04167H5.20834V9.375C5.20834 10.4801 5.64732 11.5399 6.42873 12.3213C7.21013 13.1027 8.26993 13.5417 9.37503 13.5417H10.4166C11.5217 13.5417 12.5815 13.1027 13.3629 12.3213C14.1443 11.5399 14.5833 10.4801 14.5833 9.375V1.04167ZM18.75 7.2917V3.125H17.7083C17.1558 3.125 16.6259 3.34449 16.2352 3.73519C15.8445 4.1259 15.625 4.6558 15.625 5.20833V9.375H16.6666C17.2192 9.375 17.7491 9.1555 18.1398 8.7648C18.5305 8.3741 18.75 7.8442 18.75 7.2917ZM1.04167 7.2917C1.04167 7.8442 1.26116 8.3741 1.65186 8.7648C2.04257 9.1555 2.57247 9.375 3.125 9.375H4.16667V5.20833C4.16667 4.6558 3.94718 4.1259 3.55648 3.73519C3.16578 3.34449 2.63587 3.125 2.08334 3.125H1.04167V7.2917Z' fill='white'/%3E%3C/svg%3E")
+            background-position: 86% 10px
+            background-repeat no-repeat
+            background-size: 1.4rem
+
         a
             color white
 
         .pos
             color white
             height: 30px;
-            background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.29171 22.9167C7.29171 21.8116 7.73069 20.7518 8.5121 19.9704C9.2935 19.189 10.3533 18.75 11.4584 18.75V17.7083C10.2578 17.7082 9.09411 17.2934 8.16407 16.5342C7.23403 15.775 6.59471 14.7179 6.35421 13.5417H5.20837C4.37957 13.5417 3.58472 13.2124 2.99867 12.6264C2.41261 12.0403 2.08337 11.2455 2.08337 10.4167V5.20833H4.16671C4.96671 5.20833 5.69796 5.50938 6.25004 6.00417V3.125H17.7084V6.00417C18.2807 5.49075 19.0228 5.20727 19.7917 5.20833H21.875V10.4167C21.875 11.2455 21.5458 12.0403 20.9598 12.6264C20.3737 13.2124 19.5788 13.5417 18.75 13.5417H17.6042C17.3637 14.7179 16.7244 15.775 15.7943 16.5342C14.8643 17.2934 13.7006 17.7082 12.5 17.7083V18.75C13.6051 18.75 14.6649 19.189 15.4463 19.9704C16.2277 20.7518 16.6667 21.8116 16.6667 22.9167H7.29171ZM12.5 19.7917H11.4584C10.8119 19.7915 10.1813 19.9917 9.65332 20.3648C9.12538 20.7379 8.72609 21.2655 8.51046 21.875H15.448C15.2323 21.2655 14.833 20.7379 14.3051 20.3648C13.7772 19.9917 13.1465 19.7915 12.5 19.7917ZM16.6667 4.16667H7.29171V12.5C7.29171 13.6051 7.73069 14.6649 8.5121 15.4463C9.2935 16.2277 10.3533 16.6667 11.4584 16.6667H12.5C13.6051 16.6667 14.6649 16.2277 15.4463 15.4463C16.2277 14.6649 16.6667 13.6051 16.6667 12.5V4.16667ZM20.8334 10.4167V6.25H19.7917C19.2392 6.25 18.7093 6.46949 18.3186 6.86019C17.9279 7.2509 17.7084 7.7808 17.7084 8.33333V12.5H18.75C19.3026 12.5 19.8325 12.2805 20.2232 11.8898C20.6139 11.4991 20.8334 10.9692 20.8334 10.4167ZM3.12504 10.4167C3.12504 10.9692 3.34453 11.4991 3.73523 11.8898C4.12594 12.2805 4.65584 12.5 5.20837 12.5H6.25004V8.33333C6.25004 7.7808 6.03055 7.2509 5.63985 6.86019C5.24915 6.46949 4.71924 6.25 4.16671 6.25H3.12504V10.4167Z' fill='white'/%3E%3C/svg%3E")
-            background-position: left center
-            padding-left 30px
             line-height: 30px;
 
     .rank
@@ -99,7 +95,11 @@
                     left: .5em;
 
 //============== general tables ==============
-
+.table-sticky
+    th
+        position sticky
+        top 0
+        box-shadow 0 2px 0 0 rgba(0, 0, 0, 0.06)
 table
     width 100%
 
@@ -113,13 +113,45 @@ table
         padding: $table-th-padding
         color $table-th-color
         vertical-align: middle
-
-    thead
         background-color $table-th-bg
+
+        span
+            text-decoration none
+            color $table-th-color
+            display block
+
+        &.sort
+            cursor pointer
+
+            span
+                color $body-color
+
+            & span:after
+                display inline-block
+                content ""
+                width 18px
+                height 18px
+                position absolute
+                margin-left .5em
+                top 50%
+                transform translateY(-50%)
+                background-size contain
+                background-repeat no-repeat
+
+            &.sort-asc span:after
+                background-image url("data:image/svg+xml;charset=utf8,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5625 7.9375L2.66719 9.04219L5.46875 6.24062V22H7.03125V6.24062L9.83281 9.04219L10.9375 7.9375L6.25 3.25L1.5625 7.9375Z' fill='%232F2F2F'/%3E%3Cpath d='M23.4686 20.375H12.5311V21.9375H23.4686V20.375Z' fill='%232F2F2F'/%3E%3Cpath d='M20.3436 15.6875H12.5311V17.25H20.3436V15.6875Z' fill='%23242424'/%3E%3Cpath d='M17.2186 11H12.5311V12.5625H17.2186V11Z' fill='%232F2F2F'/%3E%3C/svg%3E")
+
+            &.sort-desc span:after
+                background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5625 17.1875L2.66719 16.0828L5.46875 18.8844V3.125H7.03125V18.8844L9.83281 16.0828L10.9375 17.1875L6.25 21.875L1.5625 17.1875Z' fill='%232F2F2F'/%3E%3Cpath d='M23.4686 6.25H12.5311V4.6875H23.4686V6.25Z' fill='%232F2F2F'/%3E%3Cpath d='M20.3436 10.9375H12.5311V9.375H20.3436V10.9375Z' fill='%23242424'/%3E%3Cpath d='M17.2186 15.625H12.5311V14.0625H17.2186V15.625Z' fill='%232F2F2F'/%3E%3C/svg%3E");
 
     tbody
         tr
             border-bottom 1px solid $table-row-color
+
+            &:not(.top):hover
+                td
+                    background-color $table-tr-hover-bg
+
         td
             vertical-align bottom
 
@@ -134,6 +166,7 @@ table
     .pos
         display block
         color rgba(6,6,6,0.43)
+
 
 
     .reorder-btn
@@ -299,3 +332,35 @@ table
 
             &:hover
                 font-weight: 700
+
+
+.filter-button_reset
+    margin-left auto
+
+    span
+        color: #76766f;
+        cursor: pointer;
+        font-size: .8rem;
+        flex-shrink: 0;
+        padding: 1.1rem 3rem;
+        text-transform: uppercase;
+        display flex
+        position relative
+        align-items: center;
+        font-weight 700
+
+        i
+            display: inline-block;
+            content: "";
+            width: 18px;
+            height: 18px;
+            margin-right: 0.5em;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 28C20.3734 28 22.6935 27.2962 24.6668 25.9776C26.6402 24.6591 28.1783 22.7849 29.0866 20.5922C29.9948 18.3995 30.2324 15.9867 29.7694 13.6589C29.3064 11.3312 28.1635 9.19295 26.4853 7.51472C24.8071 5.83649 22.6689 4.6936 20.3411 4.23058C18.0133 3.76756 15.6005 4.0052 13.4078 4.91345C11.2151 5.8217 9.34094 7.35977 8.02236 9.33316C6.70379 11.3066 6 13.6266 6 16V22.2L2.4 18.6L1 20L7 26L13 20L11.6 18.6L8 22.2V16C8 14.0222 8.58649 12.0888 9.6853 10.4443C10.7841 8.79981 12.3459 7.51809 14.1732 6.76121C16.0004 6.00433 18.0111 5.8063 19.9509 6.19215C21.8907 6.578 23.6725 7.53041 25.0711 8.92894C26.4696 10.3275 27.422 12.1093 27.8079 14.0491C28.1937 15.9889 27.9957 17.9996 27.2388 19.8268C26.4819 21.6541 25.2002 23.2159 23.5557 24.3147C21.9112 25.4135 19.9778 26 18 26V28Z' fill='%23242424'/%3E%3C/svg%3E");
+
+        &:hover
+            color $tertiary-color
+
+            i
+               background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 28C20.3734 28 22.6935 27.2962 24.6668 25.9776C26.6402 24.6591 28.1783 22.7849 29.0866 20.5922C29.9948 18.3995 30.2324 15.9867 29.7694 13.6589C29.3064 11.3312 28.1635 9.19295 26.4853 7.51472C24.8071 5.83649 22.6689 4.6936 20.3411 4.23058C18.0133 3.76756 15.6005 4.0052 13.4078 4.91345C11.2151 5.8217 9.34094 7.35977 8.02236 9.33316C6.70379 11.3066 6 13.6266 6 16V22.2L2.4 18.6L1 20L7 26L13 20L11.6 18.6L8 22.2V16C8 14.0222 8.58649 12.0888 9.6853 10.4443C10.7841 8.79981 12.3459 7.51809 14.1732 6.76121C16.0004 6.00433 18.0111 5.8063 19.9509 6.19215C21.8907 6.578 23.6725 7.53041 25.0711 8.92894C26.4696 10.3275 27.422 12.1093 27.8079 14.0491C28.1937 15.9889 27.9957 17.9996 27.2388 19.8268C26.4819 21.6541 25.2002 23.2159 23.5557 24.3147C21.9112 25.4135 19.9778 26 18 26V28Z' fill='%23ff2882'/%3E%3C/svg%3E");
