--- a/views/dash.pug
+++ b/views/dash.pug
@@ -24,7 +24,7 @@ block content
 								td.text-r= n.win_ratio
 
 				footer
-					a(href="/stats/wins") View full list
+					a(href="/stats/wins?games=50&elo=1500&season=1") View full list
 						span.icon
 
 
@@ -59,7 +59,7 @@ block content
 								td.text-r= n.cap_every
 
 				footer
-					a(href="/stats/general?games=50&elo=1500") View full list
+					a(href="/stats/caps?games=50&elo=1500&season=1") View full list
 						span.icon
 
 			.stats-card
