--- a/views/layouts/_layout.pug
+++ b/views/layouts/_layout.pug
@@ -5,6 +5,7 @@ html(lang='en')
     link(rel='preconnect' href='https://fonts.gstatic.com')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap')
     link(rel='stylesheet' href='/init.css')
+    script(src='/init.js' async)
   body
     div#page-wrapper
       include ../includes/_header.pug
