--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -127,6 +127,9 @@ table
         &.sort
             cursor pointer
 
+            &:hover span
+                color: $body-color
+
             & span:after
                 display inline-block
                 content ""
