--- a/public/init.css
+++ b/public/init.css
@@ -237,6 +237,20 @@ form .optionset li,
   width: 100%;
   height: 100%;
 }
+table td,
+table th {
+  padding: 0.5rem;
+  vertical-align: top;
+}
+table th {
+  border-bottom: 1px solid #ccc;
+}
+table th p {
+  margin-bottom: 0;
+}
+.needed {
+  background: #ff0;
+}
 textarea,
 input.text,
 input[type="text"],
@@ -292,6 +306,10 @@ select {
   display: inline-block;
 }
 /* custom variables */
+box-shadow: inset 0 0 1px 2px $outline-color {
+  display: block;
+  margin-bottom: 0.5rem;
+}
 :root {
   font-family: 'Nunito', sans-serif;
   font-size: 15px;
@@ -469,6 +487,9 @@ table th.sort-desc span {
 }
 table th.sort {
   cursor: pointer;
+}
+table th.sort:hover span {
+  color: #242424;
 }
 table th.sort span:after {
   display: inline-block;
@@ -789,8 +810,9 @@ body {
 }
 #nav-main li {
   margin-bottom: 0.3rem;
+  background: #5a0f61;
 }
-#nav-main a {
+#nav-main li a {
   color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -798,6 +820,29 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+#nav-main > ul > li > .sub-nav {
+  max-height: 400px;
+  overflow-y: scroll;
+/* width */
+/* Track */
+/* Handle */
+/* Handle on hover */
+}
+#nav-main > ul > li > .sub-nav::-webkit-scrollbar {
+  width: 10px;
+}
+#nav-main > ul > li > .sub-nav::-webkit-scrollbar-track {
+  background: #4c0c52;
+}
+#nav-main > ul > li > .sub-nav::-webkit-scrollbar-thumb {
+  background: #bf96cd;
+  border-radius: 27px;
+}
+#nav-main > ul > li > .sub-nav::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+#nav-main > ul > li > a {
   padding: 0.8rem 1rem;
   background-color: #45004b;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.33337 2.16675L8.66671 6.50008L4.33337 10.8334' stroke='%23754279' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
@@ -805,10 +850,10 @@ body {
   background-repeat: no-repeat;
   border-left: 5px solid transparent;
 }
-#nav-main a:hover {
+#nav-main > ul > li > a:hover {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.33337 2.16675L8.66671 6.50008L4.33337 10.8334' stroke='%23BAA0BC' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
-#nav-main a.active {
+#nav-main > ul > li > a.active {
   margin-right: -0.5rem;
   padding-left: 1.4rem;
   background-color: #eaff04;
@@ -818,9 +863,34 @@ body {
   font-weight: 700;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.33337 2.16675L8.66671 6.50008L4.33337 10.8334' stroke='%23744B76' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
-#nav-main a:hover {
+#nav-main > ul > li > a:hover {
   border-left-color: #eaff04;
   text-decoration: none;
+}
+#nav-main nav {
+  padding: 0.5rem 0;
+  border-bottom: 1px solid rgba(255,255,255,0.33);
+}
+#nav-main nav:last-child {
+  border-bottom: none;
+}
+#nav-main nav a,
+#nav-main nav .title {
+  color: #fff;
+}
+#nav-main nav .title {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  margin: 0.5rem 0;
+  padding-left: calc(1rem + 5px);
+}
+#nav-main nav li > a {
+  padding: 0.5rem calc(1rem + 5px + 0.5rem);
+}
+#nav-main nav li > a:hover,
+#nav-main nav li > a.active {
+  background: #743279;
 }
 /******************/
 .page-filter .drop-down_list {
@@ -828,7 +898,7 @@ body {
   -webkit-animation: slideUp 0.2s ease-in-out;
           animation: slideUp 0.2s ease-in-out;
 }
-.page-filter .drop-down_list.active {
+.page-filter.active {
   display: block;
 }
 @-webkit-keyframes slideUp {
