--- a/public/init.css
+++ b/public/init.css
@@ -902,11 +902,11 @@ body {
   -webkit-animation: slideUp 0.2s ease-in-out;
           animation: slideUp 0.2s ease-in-out;
 }
-.page-filter.active {
+.page-filter .drop-down_list.active {
   display: block;
 }
 @-webkit-keyframes slideUp {
-  0% {
+  0 {
     -webkit-transform: translateY(5%);
             transform: translateY(5%);
     opacity: 0;
@@ -920,7 +920,7 @@ body {
   }
 }
 @keyframes slideUp {
-  0% {
+  0 {
     -webkit-transform: translateY(5%);
             transform: translateY(5%);
     opacity: 0;
