--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -11,7 +11,7 @@
 /******************/
 
 @keyframes slideUp
-	0%
+	0
 		transform translateY(5%)
 		opacity 0
 
@@ -26,5 +26,5 @@
 		display none
 		animation slideUp .2s ease-in-out
 
-	&.active
-		display block
+		&.active
+			display block
