--- a/src/css/custom/form.styl
+++ b/src/css/custom/form.styl
@@ -1,143 +1,154 @@
-body
-	min-height: 100vh
-	background $page-bg
+/* Custom form styling here */
+input[type='text'],
+input[type='number'],
+input[type='date'],
+input[type='password'],
+input[type='email'],
+textarea,
+.dropdown,
+select
+	width: $field-width
+	font-family: $font-family
+	border: none
+	background-color: $field-bg
+	color: $field-color
+	border-radius: $field-radius
+	padding $field-padding
+	max-width $field-max-width
 
-#page-wrapper
-	display grid
-	grid-template-columns 250px auto
-	grid-template-rows auto 1fr
-	grid-template-areas: "header header" "sidebar main"
-	height 100vh
-
-#header
-	grid-area header
-
-	.header_bar
-		background $primary-color
-		padding: .5rem 2rem
+	&:focus
+		fieldoutline()
+		outline: 0
 		color white
-		text-align right
-		font-size: .9rem;
-		font-style: italic;
-		display: flex;
-		align-items: center;
-		justify-content: flex-end;
+	&.error, &:invalid
+		fieldoutline($error-bg)
+	&.valid
+		fieldoutline($valid-bg)
+	&::placeholder
+		font-style: italic
+		color: $placeholder-color
 
-	.header_title
-		background $secondary-color
-		padding 2.9rem 1rem 2.5rem
+	&:read-only:not(select)
+		background-color: #1C203F
+		cursor no-drop
+		&:focus
+			box-shadow none
+			color $field-color
 
-		h1
-			padding-left 1.7em
-			background url(img/logo.png) no-repeat left center
-			background-size contain
+	&::-webkit-calendar-picker-indicator
+		filter: invert(1)
+/* remove default browser arrow */
+select
+	appearance: none
+	text-indent: 0.1
+	text-overflow: ''
+select::-ms-expand
+	display: none
+/* end remove arrow */
+.dropdown,
+select
+	padding $field-padding
+	padding-right 30px
+	background-image url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='451.847' height='451.847'%3E%3Cpath style='fill:%237F84B2' d='M225.923 354.706c-8.098 0-16.195-3.092-22.369-9.263L9.27 151.157c-12.359-12.359-12.359-32.397 0-44.751 12.354-12.354 32.388-12.354 44.748 0l171.905 171.915 171.906-171.909c12.359-12.354 32.391-12.354 44.744 0 12.365 12.354 12.365 32.392 0 44.751L248.292 345.449c-6.177 6.172-14.274 9.257-22.369 9.257z'/%3E%3C/svg%3E")
+	background-size 14px
+	background-position calc(100% - 14px) calc(100% - 48%)
+	background-repeat no-repeat
+	option
+		padding: $field-padding 0
+
+label
+	@extend $labelstyle
+	&.error
+		color: $error-color
+		font-weight: normal
+		padding: 0.5em 0
+.form-group
+	@extend $field-group
+form
+	h2
+		font-size: 1.2rem
+		margin-bottom: 2em
+//messages
+.message
+	padding: .2em .5em
+	display: inline-block
+	&.success
+		color: white
+		background: #4CAF50
+	&.error
+		color: #fbfbfb
+		background: #D75350
+input, textarea, select
+	& + .error
+		position: relative
+		margin-top: .5rem
+		&:before
+			content: ''
+			display: block
+			background: #D75350
+			position: absolute
+			top: -5px
+			left: 10px
+			height: 10px
+			width: 10px
+			transform: rotate(45deg)
+//checkboxes
+.form_checkbox-wrapper
+	& + &
+		margin-left 3rem
+
+	input[type="checkbox"]
+		opacity: 0
+		display: none
+
+	label
+		position: relative
+		display: block
+		cursor pointer
+		padding-left $field-checkbox-width + 1em
+		font-weight: 400
+
+		&::before,
+		&::after
+			position: absolute
+			content: ""
+			display: inline-block
+			top: 50%;
+			transform: translateY(-50%);
+			left: 0px
+
+		/*Outer box of the fake checkbox*/
+		&:before
+			height: $field-checkbox-width
+			width: $field-checkbox-width
+			background-color: $checkbox-default-bg
+			border-radius: 50%
+		/*Checkmark of the fake checkbox*/
+		&::after
+			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.91668 7.33891L1.30972 4.73195L0.190308 5.85137L3.91668 9.57774L11.6014 1.89304L10.482 0.773621L3.91668 7.33891Z' fill='white'/%3E%3C/svg%3E");
+			height: 1.7em;
+			width: 1.7em;
+			background-repeat: no-repeat;
+			background-position: center;
+
+	input[type="checkbox"]:checked + label
+		font-weight: 700
+	/*Hide the checkmark by default*/
+	input[type="checkbox"] + label::after
+		content: none
+	/*Unhide on the checked state*/
+	input[type="checkbox"]:checked + label::after
+		content: ""
+	/*Adding focus styles on the outer-box of the fake checkbox*/
+	input[type="checkbox"]:focus + label::before
+		outline: $primary-color auto 5px
 
 
-#main
-	grid-area main
-	padding-top $main-pad-top
-	padding-left $main-pad-side
-	padding-right $main-pad-side
-	position: relative
-	max-width 1350px
+	/* on hover */
+	&:hover label::before
+		background $checkbox-hover-bg
+		outline: 0
 
-	& > header
-		margin-bottom 2rem
-
-#sidebar
-	grid-area sidebar
-	background $sidebar-bg url(img/watermark-logo.png) fixed no-repeat left bottom
-
-#main, #sidebar
-	h1
-		line-height 3.6rem;
-
-#nav-main
-	margin-top 3rem
-	font-size .9rem
-
-	// all li
-	li
-		margin-bottom: .3rem;
-		background $nav-sub-bg
-
-		// all a
-		a
-			color $nav-link-color
-			display flex
-			align-items center
-
-	// primary nav
-	& > ul > li
-		& > .sub-nav
-			max-height 400px
-			overflow-y: scroll
-
-			/* width */
-			&::-webkit-scrollbar
-				width: 10px;
-
-			/* Track */
-			&::-webkit-scrollbar-track
-				background: #4C0C52;
-
-
-			/* Handle */
-			&::-webkit-scrollbar-thumb
-				background: #BF96CD;
-				border-radius 27px
-
-
-			/* Handle on hover */
-			&::-webkit-scrollbar-thumb:hover
-				background: #555;
-
-		& > a
-			padding .8rem 1rem
-			background-color $nav-link-bg
-			background-image url("data:image/svg+xml;charset=utf8,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.33337 2.16675L8.66671 6.50008L4.33337 10.8334' stroke='%23754279' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E")
-			background-position 95% center
-			background-repeat no-repeat
-			border-left 5px solid transparent
-
-			&:hover
-				background-image url("data:image/svg+xml;charset=utf8,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.33337 2.16675L8.66671 6.50008L4.33337 10.8334' stroke='%23BAA0BC' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E")
-
-
-			&.active
-				margin-right -.5rem
-				padding-left 1.4rem
-				background-color $secondary-color
-				color $sidebar-bg
-				box-shadow 0 0 10px rgba(0, 0, 0, 20%)
-				font-weight 700
-				background-image url("data:image/svg+xml;charset=utf8,%3Csvg width='13' height='13' viewBox='0 0 13 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.33337 2.16675L8.66671 6.50008L4.33337 10.8334' stroke='%23744B76' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E")
-
-			&:hover
-				border-left-color $secondary-color
-				text-decoration: none
-
-	//secondary nav
-	nav
-		padding .5rem 0
-		border-bottom 1px solid rgba(255, 255, 255, 0.33)
-
-		&:last-child
-			border-bottom none
-		a, .title
-			color white
-
-
-
-		.title
-			font-size: .7rem
-			text-transform uppercase
-			font-weight 400
-			margin .5rem 0
-			padding-left calc(1rem + 5px)
-
-		li > a
-			padding .5rem calc(1rem + 5px + .5rem)
-
-			&:hover, &.active
-				background $nav-sub-link-hover-bg
+	/*checked */
+	input:checked + label::before
+		background-color: $checkbox-checked-bg
