Update layout.styl - main padding bottom

--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -35,9 +35,7 @@ body
 
 #main
 	grid-area main
-	padding-top $main-pad-top
-	padding-left $main-pad-side
-	padding-right $main-pad-side
+	padding $main-pad-top $main-pad-side
 	position: relative
 	max-width 1350px
 
