Update variables.styl - button colours and checkbox colors

--- a/src/css/custom/variables.styl
+++ b/src/css/custom/variables.styl
@@ -31,13 +31,16 @@ $table-tr-hover-bg = #fef7ff
 
 $field-checkbox-width = 1.7em
 
+$checkbox-default-bg = rgba($tertiary-color,0.2)
+$checkbox-checked-bg = $tertiary-color
+$checkbox-hover-bg = rgba($tertiary-color,0.4)
 
-
-// not surrently used
 $button-bg = $primary-color
-$button-bg-hover = $secondary-color
+$button-bg-hover = $tertiary-color
 $button-delete-bg = #E05B52
 $button-delete-color = #E05B52
+
+// not surrently used
 $form-element-padding-top-bottom = 0.8em
 $form-element-padding-left-right = 0.8em
 $field-border = #ccd4dd
