--- a/src/css/base/form.styl
+++ b/src/css/base/form.styl
@@ -25,8 +25,9 @@ select
 	border-radius: 2px
 	transition: all .2s
 	outline: 0
+
 .form_checkbox-wrapper
-	display: inline-block
+	display: block
 	position: static
 	li
 		float: left
@@ -40,10 +41,3 @@ select
 		label
 			line-height: 1.2
 			padding-left: 17px
-/* single checkbox */
-.form_checkbox-wrapper
-	input[type=checkbox]
-		margin-left: 0
-	label
-		text-transform: none
-		display: inline-block
