Update main.styl - import form and button styles and correct slideup animation

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -5,13 +5,15 @@
 /* custom variables */
 @import 'custom/variables.styl'
 @import 'custom/type.styl'
+@import 'custom/form.styl'
+@import 'custom/buttons.styl'
 @import 'custom/components.styl'
 @import 'custom/layout.styl'
 
 /******************/
 
 @keyframes slideUp
-	0
+	0%
 		transform translateY(5%)
 		opacity 0
 
