Update main.styl - added import ui-slider styles

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -2,6 +2,9 @@
 @import 'base/helpers.styl'
 @import 'base/form.styl'
 
+/* plugins */
+@import 'plugins/nouislider.min.styl'
+
 /* custom variables */
 @import 'custom/variables.styl'
 @import 'custom/type.styl'
